Fix spacing of buttons on the room member list

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -76,9 +76,11 @@ ul.room-controls > li {
 
 .hand-list > li {
   width: 100%;
+  height: 2.5em;
 }
 
 .hand-list > li > button {
+  margin-left: 0.5em;
   margin-top: -0.5em;
   float: right;
 }
